--- a/css.css
+++ b/css.css
@@ -91,7 +91,7 @@ body {
     color: #000;
     margin: 0;
     padding: 0;
-    background-image: url(/images/world.jpg);
+    background-image: url(./images/world.jpg);
     background-repeat: no-repeat;
     background-position-x:center;
     background-size: 100%;
